# BiSeNet

./: .gitignore  LICENSE  README  README.md  adj.md  analysis.md  cityscapes.py  cityscapes_info.json  command  data  demo.py  dist_train.sh  download_cityscapes.sh  download_coco.sh  download_coco_stuff.sh  evaluate.py  infer.py  license.txt  logger.py  model.py  requirements.txt  resnet.py  run.sh  train.py  transform.py  visualize.py  xception.py
bisenetv2/: bisenetv2.py  cityscapes_cv2.py  evaluatev2.py  logger.py  meters.py  train.py  transform_cv2.py
configs/: __init__.py  bisenet_customer.py  bisenet_water.py  bisenetv1.py  bisenetv1_ade20k.py  bisenetv1_city.py  bisenetv1_coco.py  bisenetv2.py  bisenetv2_ade20k.py  bisenetv2_city.py  bisenetv2_coco.py
datasets/ade20k/: annotations  images
datasets/cityscapes/: gtFine  leftImg8bit  train.txt  val.txt
datasets/coco/images/: train2017  val2017
datasets/coco/labels/: train2017  val2017
diss/: evaluate.py  model.py  train.py
fp16/: evaluate.py  model.py  resnet.py  train.py
lib/: base_dataset.py  cityscapes_cv2.py  coco.py  get_dataloader.py  logger.py  lr_scheduler.py  ohem_ce_loss.py  sampler.py  transform_cv2.py  transform_tc.py
lib/data/: __init__.py  ade20k.py  base_dataset.py  cityscapes_analysis.py  cityscapes_cv2.py  coco.py  customer_dataset.py  get_dataloader.py  water_dataset.py
lib/models/: __init__.py  bisenetv1.py  bisenetv2.py  bisenetv2_old.py  resnet.py
lib/models/model_zoo/model.mlpackage/: Manifest.json
lib/models/model_zoo/model.mlpackage/Data/com.apple.CoreML/: model.mlmodel
model.mlpackage/: Manifest.json
model.mlpackage/Data/com.apple.CoreML/: model.mlmodel
ncnn/: .segment.cpp.swp  CMakeLists.txt  README.md  segment.cpp
old/: README.md  cityscapes.py  loss.py  model.py  transform.py
old/bisenetv2/: ohem_ce_loss.py  train.py
old/diss/: evaluate.py  model.py  train.py
old/fp16/: train.py
openvino/: CMakeLists.txt  README.md  main.cpp
tensorrt/: CMakeLists.txt  README.md  batch_stream.hpp  entropy_calibrator.hpp  kernels.cu  kernels.hpp  read_img.cpp  read_img.hpp  segment.cpp  segment.cu  segment.py  trt_dep.cpp  trt_dep.cu  trt_dep.hpp
tensorrt/plugins/: CMakeLists.txt  argmax_plugin.cu  argmax_plugin.h  kernels.cu  kernels.hpp
tis/: README.md  client.py  client_backend.py  client_grpc.py  client_http.py
tis/cpp_client/: CMakeLists.txt  main.cpp
tis/models/bisenetv1/: config.pbtxt
tis/models/bisenetv1_model/: config.pbtxt
tis/models/bisenetv2/: config.pbtxt
tis/models/bisenetv2_model/: config.pbtxt
tis/models/preprocess_cpp/: config.pbtxt
tis/models/preprocess_py/: config.pbtxt
tis/models/preprocess_py/1/: model.py
tis/self_backend/: CMakeLists.txt
tis/self_backend/cmake/: TutorialRecommendedBackendConfig.cmake.in
tis/self_backend/src/: recommended.cc
tools/: auto_split_dataset.py  check_dataset_info.py  conver_to_trt.py  convert_to_coreml.py  demo.py  demo_video.py  evaluate.py  export_libtorch.py  export_onnx.py  gen_coco_annos.py  gen_dataset_annos.py  gen_water_annos.py  train.py  train_amp.py  train_amp_water.py
